# serverless-sample

./: .gitignore  LICENSE  README.md  pyproject.toml  serverless.yml  todo.py
http/: .env.template  handler.py  serverless.yml
httpApi/: .env.template  handler.py
