[tool.poetry]
name = "serverless-sample"
version = "0.1.0"
description = ""
authors = ["Nobuhiro Nakashima <ombran@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.17.51"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
